add sample for PreStart event testing
Signed-off-by: Rohan Kumar <rohaan@redhat.com>

--- a/test-devworkspace-config-storageaccess.yml
+++ b/test-devworkspace-config-storageaccess.yml
@@ -10,5 +10,4 @@ config:
     - ReadWriteMany
 kind: DevWorkspaceOperatorConfig
 metadata:
-  name: external-dwoc-storageaccess-rwx
-  namespace: openshift-operators
+  name: external-dwoc-test
